refactor(CodeQuality): SonarQube 경고에 따른 일부 코드 수정