@@ -6,7 +6,6 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.security.authentication.BadCredentialsException;
@@ -35,9 +34,9 @@ class CustomAuthenticationProviderTest {
     void 비밀번호가_없는_계정으로_인증에_성공한다() {
         // given
         UserDetails userDetails = User.withUsername("user")
-                .password("")
-                .authorities("ROLE_USER")
-                .build();
+            .password("")
+            .authorities("ROLE_USER")
+            .build();
         when(userDetailsService.loadUserByUsername("user")).thenReturn(userDetails);
 
         Authentication authentication = new UsernamePasswordAuthenticationToken("user", null);
@@ -50,12 +49,12 @@ class CustomAuthenticationProviderTest {
         assertThat(result.getCredentials()).isNull();
 
         List<String> resultAuthorities = result.getAuthorities().stream()
-                .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+            .map(GrantedAuthority::getAuthority)
+            .toList();
 
         List<String> expectedAuthorities = userDetails.getAuthorities().stream()
-                .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+            .map(GrantedAuthority::getAuthority)
+            .toList();
 
         assertThat(resultAuthorities).isEqualTo(expectedAuthorities);
     }
@@ -66,9 +65,9 @@ class CustomAuthenticationProviderTest {
         String rawPassword = "password";
         String encodedPassword = "$2a$10$D9Q.iI1mUB7M8oC7a9tvUeC/Ux0XlxpWxjk3nFygWVa4U6S0VV/SK";
         UserDetails userDetails = User.withUsername("user")
-                .password(encodedPassword) // 비밀번호가 있는 계정
-                .authorities("ROLE_USER")
-                .build();
+            .password(encodedPassword) // 비밀번호가 있는 계정
+            .authorities("ROLE_USER")
+            .build();
 
         when(userDetailsService.loadUserByUsername("user")).thenReturn(userDetails);
         when(passwordEncoder.matches(rawPassword, encodedPassword)).thenReturn(true);
@@ -83,12 +82,12 @@ class CustomAuthenticationProviderTest {
         assertThat(result.getCredentials()).isEqualTo(rawPassword);
 
         List<String> resultAuthorities = result.getAuthorities().stream()
-                .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+            .map(GrantedAuthority::getAuthority)
+            .toList();
 
         List<String> expectedAuthorities = userDetails.getAuthorities().stream()
-                .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+            .map(GrantedAuthority::getAuthority)
+            .toList();
 
         assertThat(resultAuthorities).isEqualTo(expectedAuthorities);
     }
@@ -99,9 +98,9 @@ class CustomAuthenticationProviderTest {
         String rawPassword = "wrongpassword";
         String encodedPassword = "$2a$10$D9Q.iI1mUB7M8oC7a9tvUeC/Ux0XlxpWxjk3nFygWVa4U6S0VV/SK";
         UserDetails userDetails = User.withUsername("user")
-                .password(encodedPassword)
-                .authorities("ROLE_USER")
-                .build();
+            .password(encodedPassword)
+            .authorities("ROLE_USER")
+            .build();
 
         when(userDetailsService.loadUserByUsername("user")).thenReturn(userDetails);
         when(passwordEncoder.matches(rawPassword, encodedPassword)).thenReturn(false);
@@ -110,7 +109,7 @@ class CustomAuthenticationProviderTest {
 
         // when, then
         assertThatThrownBy(() -> authenticationProvider.authenticate(authentication))
-                .isInstanceOf(BadCredentialsException.class)
-                .hasMessageContaining("자격 증명에 실패하였습니다.");
+            .isInstanceOf(BadCredentialsException.class)
+            .hasMessageContaining("자격 증명에 실패하였습니다.");
     }
 }
